--- a/HttpClientTest2/Main.storyboard
+++ b/HttpClientTest2/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="lN3-tT-kFg">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Main View Controller-->
@@ -16,26 +17,110 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AWB-09-mNZ">
-                                <rect key="frame" x="263" y="285" width="74" height="30"/>
-                                <state key="normal" title="PostAsync">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AWB-09-mNZ">
+                                <rect key="frame" x="16" y="49" width="568" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="1 GET (OK)">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="buttonClick:" destination="lN3-tT-kFg" eventType="touchUpInside" id="jYK-a4-v0P"/>
+                                    <action selector="oneGet:" destination="lN3-tT-kFg" eventType="touchUpInside" id="RZu-b0-CQ1"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ppk-Hz-xbP">
+                                <rect key="frame" x="16" y="85" width="568" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="2 GETs (OK)">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="twoGets:" destination="lN3-tT-kFg" eventType="touchUpInside" id="LhZ-e7-wOY"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parallel getAsync works" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8v5-LZ-pbZ">
+                                <rect key="frame" x="16" y="20" width="154" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBC-nv-isK">
+                                <rect key="frame" x="16" y="199" width="568" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="1 POST (Mostly ok)">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onePost:" destination="lN3-tT-kFg" eventType="touchUpInside" id="Fap-cT-glk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AlV-qG-jY1">
+                                <rect key="frame" x="16" y="235" width="568" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="2 POSTs (protocol violation exception)">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="twoPosts:" destination="lN3-tT-kFg" eventType="touchUpInside" id="GLl-w6-Mpj"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parallel postAsync crashes (&gt;1 parallel) If the first click is on 2 POSTs it will most of the time crash." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sY-xh-yNK">
+                                <rect key="frame" x="16" y="157" width="568" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhC-wG-RkC">
+                                <rect key="frame" x="16" y="121" width="568" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="20 GETs (OK)">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="twentyGets:" destination="lN3-tT-kFg" eventType="touchUpInside" id="2Tt-um-tdc"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U8l-cd-N1f">
+                                <rect key="frame" x="16" y="271" width="568" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="20 POSTs (invalid operation exception)">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="twentyPosts:" destination="lN3-tT-kFg" eventType="touchUpInside" id="gF0-Nw-wDb"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="AWB-09-mNZ" secondAttribute="centerY" id="8ha-TA-Wve"/>
-                            <constraint firstAttribute="centerX" secondItem="AWB-09-mNZ" secondAttribute="centerX" id="rTR-8g-HO9"/>
+                            <constraint firstItem="AlV-qG-jY1" firstAttribute="leading" secondItem="g6e-zF-q68" secondAttribute="leadingMargin" id="2Bj-rA-6fj"/>
+                            <constraint firstItem="8v5-LZ-pbZ" firstAttribute="leading" secondItem="g6e-zF-q68" secondAttribute="leadingMargin" id="4E9-OB-w28"/>
+                            <constraint firstItem="Ppk-Hz-xbP" firstAttribute="leading" secondItem="g6e-zF-q68" secondAttribute="leadingMargin" id="4pg-JV-T1D"/>
+                            <constraint firstItem="U8l-cd-N1f" firstAttribute="top" secondItem="AlV-qG-jY1" secondAttribute="bottom" constant="8" id="7uX-MP-uzG"/>
+                            <constraint firstItem="9sY-xh-yNK" firstAttribute="top" secondItem="hhC-wG-RkC" secondAttribute="bottom" constant="8" id="AD6-eS-iyY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AlV-qG-jY1" secondAttribute="trailing" id="E8L-mO-88W"/>
+                            <constraint firstItem="9sY-xh-yNK" firstAttribute="leading" secondItem="g6e-zF-q68" secondAttribute="leadingMargin" id="EbI-5H-i4u"/>
+                            <constraint firstItem="UBC-nv-isK" firstAttribute="leading" secondItem="g6e-zF-q68" secondAttribute="leadingMargin" id="Fzi-OS-CnA"/>
+                            <constraint firstItem="U8l-cd-N1f" firstAttribute="leading" secondItem="g6e-zF-q68" secondAttribute="leadingMargin" id="GEh-uJ-BVb"/>
+                            <constraint firstItem="AlV-qG-jY1" firstAttribute="top" secondItem="UBC-nv-isK" secondAttribute="bottom" constant="8" id="OKw-YP-pzx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="UBC-nv-isK" secondAttribute="trailing" id="R6s-7I-fJd"/>
+                            <constraint firstItem="UBC-nv-isK" firstAttribute="top" secondItem="9sY-xh-yNK" secondAttribute="bottom" constant="8" id="RRD-aQ-ySA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9sY-xh-yNK" secondAttribute="trailing" id="Zna-KN-hmg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ppk-Hz-xbP" secondAttribute="trailing" id="cNo-hP-Q1M"/>
+                            <constraint firstItem="hhC-wG-RkC" firstAttribute="top" secondItem="Ppk-Hz-xbP" secondAttribute="bottom" constant="8" id="cVo-Z1-ybA"/>
+                            <constraint firstItem="AWB-09-mNZ" firstAttribute="leading" secondItem="g6e-zF-q68" secondAttribute="leadingMargin" id="hDj-Ze-UBm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AWB-09-mNZ" secondAttribute="trailing" id="ijt-Yw-E8o"/>
+                            <constraint firstItem="AWB-09-mNZ" firstAttribute="top" secondItem="8v5-LZ-pbZ" secondAttribute="bottom" constant="12" id="kIn-4G-CAC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="U8l-cd-N1f" secondAttribute="trailing" id="lV5-0h-HdL"/>
+                            <constraint firstItem="hhC-wG-RkC" firstAttribute="leading" secondItem="g6e-zF-q68" secondAttribute="leadingMargin" id="lm3-tV-2Gw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hhC-wG-RkC" secondAttribute="trailing" id="mJa-4U-txy"/>
+                            <constraint firstItem="Ppk-Hz-xbP" firstAttribute="top" secondItem="AWB-09-mNZ" secondAttribute="bottom" constant="8" id="poG-vj-wXH"/>
+                            <constraint firstItem="8v5-LZ-pbZ" firstAttribute="top" secondItem="ZC4-0X-T2c" secondAttribute="bottom" id="swS-77-Rsl"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rbG-nB-ZaY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="181" y="116"/>
+            <point key="canvasLocation" x="261" y="94"/>
         </scene>
     </scenes>
 </document>
